--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+run rails server in iterm like: rails s
 
-Things you may want to cover:
+access localhost:3000
 
-* Ruby version
+if you use  chrome prss ctrl + shift + j in linux
 
-* System dependencies
+type in test_1() and view iterm puts .
 
-* Configuration
+same to test_1() you can type test_2() and _test_3()
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+that three method ara same expect data format, then we should handle them in different way 
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
